fix: home - mobile 'www.knowitalls' link width overflow -> now fits

--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -62,7 +62,7 @@ ul.hidden.shrink li {
 }
 
 .knowitalls {
-  width: 300px;
+  width: 275px;
   margin: auto;
   border-radius: 8px;
   text-align: center;
